--- a/src/scss/modal.scss
+++ b/src/scss/modal.scss
@@ -9,7 +9,7 @@
 .modal-cover {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   background: rgba(0, 0, 0, 0.4);
@@ -43,7 +43,7 @@
   border-radius: 8px;
   overflow: hidden;
   z-index: 15;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -70%);
@@ -116,12 +116,50 @@
     }
   }
 }
-.modal-text {
-  padding: 20px 70px;
+.modal-content {
+  padding: 0 30px;
+  display: flex;
+}
+
+.modal-image {
+  height: 300px;
+  img {
+    height: 100%;
+  }
+}
+.modal-data {
+  margin-left: 20px;
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.modal-product-name {
+  font-size: 20px;
+  color: #fff;
   text-align: center;
+  margin-top: 10px;
   flex: 1 1 auto;
+}
+.modal-data-item {
   font-size: 16px;
-  line-height: 25px;
+  display: flex;
+  height: 27px;
+  background: rgb(175, 175, 175);
+  margin-top: 5px;
+  color: black;
+  line-height: 27px;
+}
+.modal-data-name {
+  width: 50%;
+  padding-left: 15px;
+  &.price {
+    font-weight: bold;
+  }
+}
+.modal-data-value {
+  &.price {
+    font-weight: bold;
+  }
 }
 .modal-actions {
   padding: 20px 30px;
