--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,13 +1,14 @@
 .header {
   // background: rgb(85, 85, 85);
-  min-height: 409px;
+  min-height: 444px;
   position: relative;
   padding: 150px 170px;
   img {
-    width: 100%;
+    height: 100%;
     position: absolute;
-    left: 0;
+    left: 50%;
     top: 0;
+    transform: translateX(-50%);
     z-index: -1;
   }
   h1 {
@@ -25,7 +26,8 @@
 .menu-container {
   display: flex;
   justify-content: space-between;
-  width: 100%;
+  max-width: 1200px;
+  position: relative;
 }
 .header-menu {
   position: relative;
@@ -39,10 +41,19 @@
   .header-menu_links {
     line-height: 40px;
     .header-menu_link {
+      padding: 10px;
+      font-size: 16px;
       color: #fff;
       margin-left: 40px;
       text-align: center;
+      transition: all 0.2s ease 0s;
       // border: 1px solid #000;
+      &:hover {
+        background: #000;
+      }
+      &.selected {
+        background: rgb(255, 65, 65);
+      }
     }
   }
 }
@@ -96,8 +107,8 @@
 }
 .cart-content {
   position: absolute;
-  right: 45px;
-  top: 68px;
+  right: 27px;
+  top: 56px;
   width: 400px;
   background: rgb(59, 59, 59);
   padding: 10px;
@@ -141,6 +152,11 @@
   color: #fff;
   margin-right: 20px;
 }
+.cart-item-count {
+  font-size: 18px;
+  color: #fff;
+  padding-right: 10px;
+}
 .cart-item-remove {
   position: relative;
   width: 30px;
@@ -160,5 +176,22 @@
   }
   &:hover {
     transform: rotate(90deg);
+  }
+}
+.cart-header-btn-wrapper {
+  display: flex;
+  justify-content: flex-end;
+}
+.btn-to-order {
+  display: block;
+  width: 50%;
+  background: rgb(255, 122, 60);
+  padding: 20px;
+  font-size: 18px;
+  text-align: center;
+  color: #fff;
+  &:hover {
+    background: rgb(211, 67, 0);
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.377);
   }
 }
