--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,6 +7,21 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: rgb(24, 24, 24);
 }
+// ========SCROLL================================
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #616161;
+}
+
+body::-webkit-scrollbar {
+  width: 6px;
+  background-color: #888888;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #000000;
+}
+// =================================================================
 p {
   margin: 0;
   padding: 0;
@@ -19,9 +34,24 @@ h2 {
   font-size: 30px;
   color: #fff;
 }
+.container {
+  width: 1200px;
+  margin: 0px auto;
+  flex: 1 1 auto;
+}
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 100vh;
+  overflow: hidden;
+}
 @import "null";
 @import "App";
 @import "header";
 @import "main-body";
 @import "modal";
 @import "product-card";
+@import "cart";
+@import "contacts";
+@import "footer";
