--- a/src/scss/main-body.scss
+++ b/src/scss/main-body.scss
@@ -2,7 +2,7 @@
   margin-top: 2px;
   min-height: 1000px;
   background: rgb(110, 110, 110);
-  padding: 30px;
+  padding: 30px 70px;
 }
 .products-field {
   display: grid;
