--- a/src/scss/cart.scss
+++ b/src/scss/cart.scss
@@ -7,6 +7,23 @@
   color: #fff;
   text-align: center;
 }
+.empty-cart {
+  width: 100%;
+  height: 200px;
+  font-size: 25px;
+  font-weight: 600;
+  text-align: center;
+  line-height: 190px;
+  margin-top: 20px;
+}
+.empty-cart-icon {
+  width: 200px;
+  height: 200px;
+  margin: 0px auto;
+  svg {
+    fill: rgb(15, 15, 15);
+  }
+}
 .cartPage-item {
   width: 100%;
   height: 200px;
@@ -117,14 +134,4 @@ button.cartPage-btn {
 }
 .total-amount {
   font-size: 25px;
-}
-.empty-cart {
-  width: 100%;
-  height: 200px;
-  font-size: 25px;
-  font-weight: 600;
-  background: rgb(218, 218, 218);
-  text-align: center;
-  line-height: 190px;
-  margin-top: 20px;
 }
