--- a/src/scss/product-card.scss
+++ b/src/scss/product-card.scss
@@ -2,24 +2,31 @@
   background: rgb(219, 219, 219);
   border-radius: 8px;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.431);
-  min-height: 500px;
-
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  height: 540px;
 }
 .card-header {
   background: rgb(255, 255, 255);
-  min-height: 65%;
+  height: 65%;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  padding: 20px;
+  padding: 15px;
+  position: relative;
   img {
     display: block;
-    width: 60%;
+    height: 100%;
     margin: 0px auto;
   }
+}
+.card-header-icon {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  right: 20px;
+  top: 20px;
 }
 .card-body {
   padding: 10px 20px;
@@ -29,8 +36,8 @@
 .card-name {
   font-size: 16px;
   font-weight: 600;
-  margin-bottom: 10px;
-  min-height: 40px;
+  margin-bottom: 5px;
+  min-height: 28px;
 }
 .card-data {
   display: flex;
