form-controlled-pure-js

--- a/src/scss/modal.scss
+++ b/src/scss/modal.scss
@@ -176,3 +176,22 @@
   margin: 0 5px;
   font-size: 16px;
 }
+// =========================================================
+.order-main-text {
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.order-comments {
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+.order-data-item {
+  display: flex;
+  width: 100%;
+  border-bottom: 1px solid rgb(32, 32, 32);
+  margin-bottom: 5px;
+  padding-bottom: 5px;
+}
+.order-data-key {
+  min-width: 30%;
+}
