--- a/src/scss/cart.scss
+++ b/src/scss/cart.scss
@@ -114,14 +114,70 @@ button.cartPage-btn {
   height: 50px;
   background: rgb(255, 122, 34);
 }
-.cart-body-footer {
+// =================================================================
+.cart-body-form {
   width: 100%;
   background: rgb(170, 170, 170);
   display: flex;
+  flex-direction: column;
   padding: 20px 30px;
-  justify-content: flex-end;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 0px auto;
+}
+.cart-form-header {
+  text-align: center;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+.cart-form {
+  width: 700px;
+}
+.cart-inputs-area {
+  width: 100%;
+}
+.cart-input-form-block {
+  display: flex;
+}
+.cart-input-label-group {
+  width: 70%;
+}
+.form-label {
+  display: flex;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+.form-control-input {
+  height: 40px;
+  width: 100%;
+  margin-bottom: 20px;
+  padding: 0 10px;
+  background: rgb(228, 228, 228);
+  position: relative;
+  &:focus {
+    // border: 1px solid #000;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.397);
+    background: rgb(255, 255, 255);
+  }
+  &.valid {
+    background: rgb(226, 255, 172);
+  }
+}
+.form-error {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  color: rgb(255, 62, 62);
+  margin: 10px;
+  margin-left: 20px;
 }
 .cart-body-totalBlock {
+  background: rgb(131, 131, 131);
+  display: flex;
+  justify-content: flex-end;
+  padding: 20px;
+}
+.cart-body-totalBlock-data {
   font-size: 22px;
   font-weight: 600;
   line-height: 40px;
@@ -134,4 +190,13 @@ button.cartPage-btn {
 }
 .total-amount {
   font-size: 25px;
+}
+.checked-input {
+  margin-top: 26px;
+  margin-left: 20px;
+  width: 40px;
+  height: 40px;
+  & svg {
+    fill: rgb(104, 255, 112);
+  }
 }
