--- a/src/scss/cart.scss
+++ b/src/scss/cart.scss
@@ -154,6 +154,8 @@ button.cartPage-btn {
   padding: 0 10px;
   background: rgb(228, 228, 228);
   position: relative;
+  border: 1px solid rgb(107, 107, 107);
+  border-radius: 5px;
   &:focus {
     // border: 1px solid #000;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.397);
@@ -161,6 +163,11 @@ button.cartPage-btn {
   }
   &.valid {
     background: rgb(226, 255, 172);
+    border: 1px solid rgb(0, 144, 60);
+  }
+  &.is-invalid {
+    background: rgb(255, 161, 161);
+    border: 1px solid rgb(255, 80, 80);
   }
 }
 .form-error {
@@ -197,6 +204,17 @@ button.cartPage-btn {
   width: 40px;
   height: 40px;
   & svg {
-    fill: rgb(104, 255, 112);
+    fill: rgb(0, 255, 106);
+  }
+}
+.cart-body-order {
+  border-radius: 7px;
+  min-width: 30px;
+  margin-right: 20px;
+  &.reset {
+    background: rgb(51, 51, 51);
+    &:hover {
+      background: #000;
+    }
   }
 }
